<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="app_tip">提示</string>
    <string name="app_name">问来问去</string>
    <string name="check_network">请注意检查网络</string>
    <string name="project_bizhong">￥</string>
    <string name="mine_itemtext_wodexuanshang">我的悬赏</string>
    <string name="mine_itemtext_tuijianhaoyou">推荐好友</string>
    <string name="mine_itemtext_yonghuxieyi">用户协议</string>
    <string name="mine_itemtext_youhuiquan">优惠券</string>
    <string name="mine_itemtext_yijianfankui">意见反馈</string>
    <string name="mine_itemtext_shezhi">设置</string>
    <string name="login_denglutext">登陆</string>
    <string name="login_lijizhucetext">立即注册</string>
    <string name="login_wangjimimatext">忘记密码?</string>
    <string name="setting_qinglihuancun">清理缓存</string>
    <string name="setting_xiugaimima">修改密码</string>
    <string name="setting_genghuanshoujihao">更换手机号</string>
    <string name="setting_guanyuwomen">关于我们</string>
    <string name="setting_jiancegengxin">检测更新</string>
    <string name="setting_tuichudenglu">退出登录</string>
    <string name="setting_genghuanshoujihao_daojishitext">"%s秒后重新获取"</string>
    <string name="wodexuanshang_tixiantitle">提现</string>
    <string name="wodexuanshang_qianshu">"￥\t%s"</string>
    <string name="wodexuanshang_qingshuruzhenshixingming">请输入真实姓名</string>
    <string name="wodexuanshang_qingshuruzhifubao">请输入支付宝帐号</string>
    <string name="wodexuanshang_dangqianxuanshangjine">当前悬赏金额为 %s 元,</string>
    <string name="wodexuanshang_quanbutixian">全部提现,</string>
    <string name="wodexuanshang_meicizuishao">每次最少15元</string>
    <string name="wodexuanshang_querentixian">确认提现</string>
    <string name="wodexuanshang_tixiandengdaitishi">提现时间大概在48小时之内, 请耐心等待</string>
    <string name="setting_haoyoufenxiang_qqhaoyou">QQ好友</string>
    <string name="setting_haoyoufenxiang_weixinhaoyou">微信好友</string>
    <string name="setting_haoyoufenxiang_xinlanghaoyou">新浪好友</string>
    <string name="setting_haoyoufenxiang_tuijianguize">推荐规则</string>
    <string name="setting_haoyoufenxiang_tuijianguizexiangqing">您可通过"推荐好友-推荐好友转奖励"活动, 分享新客福利给自己的朋友, 分享的内容中会包含推广链接: 通过"短信"方式推荐好友, 被推荐的好友手机号将与您关联。\n(一)当您的朋友点击推广链接进入陆金所注册账户, 或者用您的手机号码在陆金所注册账户, 您都将成为该好友的推荐人。 推荐好友赠送￥50优惠券</string>
    <string name="setting_yonghuxieyi_guanyuwomen">关于我们</string>
    <string name="setting_about">\t\t问来问去是一款以经验分享的方式铺展在高校校园内的解答众包APP。用高年级的经验跟知识解决低年级的困惑，将校园网红以及学霸们带进一个知识变现的时代。
\n\n问来问去APP基于位置标记，将问题发布在2D平面地图及3DBuilding上，以位置定需求，并附带赏金。在校园内占展开一场知识分享的高精准问答社区。与传统社区相比，问来问去APP具有防水、防广告、防违规、防泄露等优势，将问题更直接的表现在客户端，可以有效解决高中生毕业选择专业、大学前指导、大学年级交流沟通、师兄师姐帮帮忙、就业行业对接等多个问题。把最直接的问题交给最对的人来处理，实现信息的高效传递。
\n\n问来问去项目组隶属于天津玲珑心科技有限公司，工作地点于天津红桥区光荣道与保康路交口，项目成员以开发、运营“问来问去”APP为中心，拓展校园知识变现上下游业务。前期在京津冀地区做精准推广，后期面向全国大学市场，将掀起校园知识经验分享变现的一个潮流。
\n\n致力于打造一个全国范围内高校精准社区化信息分享平台。
\n\n有任何问题可联系客服，来电请致022-60862853或15002275439或13752484457。
\n\n本公司（团队）招募有志青年，待遇丰厚，共同开发项目，公司有其他项目等你一起来创！联系QQ：1587079185
    </string>
<string name="setting_xieyi">\t\t“问来问去”是天津玲珑心科技有限公司(以下称“玲珑心科技”)旗下开发一款高校内解答类产品。玲珑心科技在此特别提醒您(用户)在注册成为用户之前，请认真阅读本《用户协议》(以下简称“协议”)，确保您充分理解本协议中各条款。请您审慎阅读并选择接受或不接受本协议。除非您接受本协议所有条款，否则您无权注册、登录或使用本协议所涉服务。您的注册、登录、使用等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。
\n\n本协议约定玲珑心科技与用户之间关于“问来问去”软件服务(以下简称“服务”)的权利义务。“用户”是指注册、登录、使用本服务的个人。本协议可由玲珑心科技随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本网站查阅最新版协议条款。在玲珑心科技修改协议条款后，如果用户不接受修改后的条款，请立即停止使用玲珑心科技提供的服务，用户继续使用玲珑心科技提供的服务将被视为接受修改后的协议。
\n\n<b>一、账号注册</b>
\n\n1、用户在使用本服务前需要注册一个“问来问去”账号。“问来问去”账号应当使用手机号码绑定注册，请用户使用尚未与“问来问去”账号绑定的手机号码，以及未被玲珑心科技根据本协议封禁的手机号码注册“问来问去”账号。玲珑心科技可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。
\n2、用户注册时应当授权玲珑心科技公开及使用其地理位置信息方可成功注册“问来问去”账号。故用户完成注册即表明用户同意玲珑心科技提取、公开及使用用户的地理位置信息。如用户需要终止向其他用户公开其地理位置信息，可自行设置为隐身状态。
\n3、鉴于“问来问去”账号的绑定注册方式，您同意玲珑心科技在注册时将使用您提供的手机号码及/或自动提取您的手机号码及自动提取您的手机设备识别码等信息用于注册。
\n4、在用户注册及使用本服务时，玲珑心科技需要搜集能识别用户身份的个人信息以便玲珑心科技可以在必要时联系用户，或为用户提供更好的使用体验。玲珑心科技搜集的信息包括但不限于用户的姓名、性别、年龄、出生日期、身份证号、地址、学校情况、公司情况、所属行业、兴趣爱好、常出没的地方、个人说明;玲珑心科技同意对这些信息的使用将受限于第三条用户个人隐私信息保护的约束。
\n\n<b>二、服务内容</b>
\n\n1、本服务的具体内容由玲珑心科技根据实际情况提供，包括但不限于授权用户通过其账号进行即时通讯、添加好友、加入群组、关注他人、发布留言。玲珑心科技可以对其提供的服务予以变更，且玲珑心科技提供的服务内容可能随时变更;用户将会收到玲珑心科技关于服务变更的通知。
\n2、玲珑心科技提供的服务包含免费服务与收费服务。用户可以通过付费方式购买收费服务，具体方式为：用户通过支付宝或其他“问来问去”平台提供的付费途径支付一定数额的人民币，然后根据玲珑心科技公布的资费标准购买用户欲使用的收费服务，从而获得收费服务使用权限。对于收费服务，玲珑心科技会在用户使用之前给予用户明确的提示，只有用户根据提示确认其同意按照前述支付方式支付费用并完成了支付行为，用户才能使用该等收费服务。支付行为的完成以银行或第三方支付平台生成“支付已完成”的确认通知为准。
\n\n<b>三、用户个人隐私信息保护</b>
\n\n1、用户在注册账号或使用本服务的过程中，可能需要填写或提交一些必要的信息，如法律法规、规章规范性文件(以下称“法律法规”)规定的需要填写的身份信息。如用户提交的信息不完整或不符合法律法规的规定，则用户可能无法使用本服务或在使用本服务的过程中受到限制。
\n2、个人隐私信息是指涉及用户个人身份或个人隐私的信息，比如，用户真实姓名、身份证号、手机号码、手机设备识别码、IP地址、用户聊天记录。非个人隐私信息是指用户对本服务的操作状态以及使用习惯等明确且客观反映在玲珑心科技服务器端的基本记录信息、个人隐私信息范围外的其它普通信息，以及用户同意公开的上述隐私信息。
\n3、尊重用户个人隐私信息的私有性是玲珑心科技的一贯制度，玲珑心科技将采取技术措施和其他必要措施，确保用户个人隐私信息安全，防止在本服务中收集的用户个人隐私信息泄露、毁损或丢失。在发生前述情形或者玲珑心科技发现存在发生前述情形的可能时，将及时采取补救措施。
\n4、玲珑心科技未经用户同意不向任何第三方公开、 透露用户个人隐私信息。但以下特定情形除外：\n
(1) 玲珑心科技根据法律法规规定或有权机关的指示提供用户的个人隐私信息;\n
(2) 由于用户将其用户密码告知他人或与他人共享注册帐户与密码，由此导致的任何个人信息的泄漏，或其他非因玲珑心科技原因导致的个人隐私信息的泄露;\n
(3) 用户自行向第三方公开其个人隐私信息;\n
(4) 用户与玲珑心科技及合作单位之间就用户个人隐私信息的使用公开达成约定，玲珑心科技因此向合作单位公开用户个人隐私信息;\n
(5) 任何由于黑客攻击、电脑病毒侵入及其他不可抗力事件导致用户个人隐私信息的泄露。\n
5、用户同意玲珑心科技可在以下事项中使用用户的个人隐私信息：\n
(1) 玲珑心科技向用户及时发送重要通知，如软件更新、本协议条款的变更;\n
(2) 玲珑心科技内部进行审计、数据分析和研究等，以改进玲珑心科技的产品、服务和与用户之间的沟通;\n
(3) 依本协议约定，玲珑心科技管理、审查用户信息及进行处理措施;\n
(4) 适用法律法规规定的其他事项。\n
除上述事项外，如未取得用户事先同意，玲珑心科技不会将用户个人隐私信息使用于任何其他用途。\n
6、玲珑心科技重视对未成年人个人隐私信息的保护。玲珑心科技将依赖用户提供的个人信息判断用户是否为未成年人。任何18岁以下的未成年人注册账号或使用本服务应事先取得家长或其法定监护人(以下简称"监护人")的书面同意。除根据法律法规的规定及有权机关的指示披露外，玲珑心科技不会使用或向任何第三方透露未成年人的聊天记录及其他个人隐私信息。除本协议约定的例外情形外，未经监护人事先同意，玲珑心科技不会使用或向任何第三方透露未成年人的个人隐私信息。任何18岁以下的用户不得下载和使用玲珑心科技通过问来问去软件提供的网络游戏。
\n7、用户确认，其地理位置信息为非个人隐私信息，用户成功注册“问来问去”账号视为确认授权玲珑心科技提取、公开及使用用户的地理位置信息。用户地理位置信息将作为用户公开资料之一，由玲珑心科技向其他用户公开。如用户需要终止向其他用户公开其地理位置信息，可随时自行设置为隐身状态。
\n2.根据情况可为资深天使开放新的窗口进行线上互动或讲座；
\n8、为了改善玲珑心科技的技术和服务，向用户提供更好的服务体验，玲珑心科技或可会自行收集使用或向第三方提供用户的非个人隐私信息。
\n\n<b>四、内容规范</b>
\n\n1、本条所述内容是指用户使用本服务过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于账号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用账号或本服务所产生的内容。
\n2、用户不得利用“问来问去”账号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：
\n(1) 反对宪法所确定的基本原则的;
        \n(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的;
\n(3) 损害国家荣誉和利益的;
\n(4) 煽动民族仇恨、民族歧视，破坏民族团结的;
\n(5) 破坏国家宗教政策，宣扬邪教和封建迷信的;
\n(6) 散布谣言，扰乱社会秩序，破坏社会稳定的;
\n(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的;
\n(8) 侮辱或者诽谤他人，侵害他人合法权益的;
\n(9) 不遵守法律法规底线、社会主义制度底线、国家利益底线、公民合法权益底线、社会公共秩序底线、道德风尚底线和信息真实性底线的“七条底线”要求的;
\n(10) 含有法律、行政法规禁止的其他内容的信息。
\n3、用户不得利用“问来问去”账号或本服务制作、上载、复制、发布、传播如下干扰“问来问去”正常运营，以及侵犯其他用户或第三方合法权益的内容：
\n(1) 含有任何性或性暗示的;
\n(2) 含有辱骂、恐吓、威胁内容的;
\n(3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的;
\n(4) 涉及他人隐私、个人信息或资料的;
\n(5) 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的;
\n(6) 含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。\n\n
        <b>五、使用规则</b>
\n\n1、用户在本服务中或通过本服务所传送、发布的任何内容并不反映或代表，也不得被视为反映或代表玲珑心科技的观点、立场或政策，玲珑心科技对此不承担任何责任。
\n2、用户不得利用“问来问去”账号或本服务进行如下行为：
\n(1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的;
\n(2) 强制、诱导其他用户关注、点击链接页面或分享信息的;
       \n(3) 虚构事实、隐瞒真相以误导、欺骗他人的;
\n(4) 利用技术手段批量建立虚假账号的;
\n(n5) 利用“问来问去”账号或本服务从事任何违法犯罪活动的;
\n(6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的;
\n(7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“问来问去”正常运营或玲珑心科技未明示授权的行为。
\n3、用户须对利用“问来问去”账号或本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责，与用户所传播的信息相关的任何法律责任由用户自行承担，与玲珑心科技无关。如因此给玲珑心科技或第三方造成损害的，用户应当依法予以赔偿。
\n4、玲珑心科技提供的服务中可能包括广告，用户同意在使用过程中显示玲珑心科技和第三方供应商、合作伙伴提供的广告。除法律法规明确规定外，用户应自行对依该广告信息进行的交易负责，对用户因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，玲珑心科技不承担任何责任。
\n\n  <b>六、帐户管理</b>
\n\n1、 “问来问去”账号的所有权归玲珑心科技所有，用户完成申请注册手续后，获得“问来问去”账号的使用权，该使用权仅属于初始申请注册人，禁止赠与、借用、租用、转让或售卖。玲珑心科技因经营需要，有权回收用户的“问来问去”账号。
\2、用户可以更改、删除“问来问去”帐户上的个人资料、注册信息及传送内容等，但需注意，删除有关信息的同时也会删除用户储存在系统中的文字和图片。用户需承担该风险。
\n3、用户有责任妥善保管注册账号信息及账号密码的安全，因用户保管不善可能导致遭受盗号或密码失窃，责任由用户自行承担。用户需要对注册账号以及密码下的行为承担法律责任。用户同意在任何情况下不使用其他用户的账号或密码。在用户怀疑他人使用其账号或密码时，用户同意立即通知玲珑心科技。
\n4、用户应遵守本协议的各项条款，正确、适当地使用本服务，如因用户违反本协议中的任何条款，玲珑心科技在通知用户后有权依据协议中断或终止对违约用户“问来问去”账号提供服务。同时，玲珑心科技保留在任何时候收回“问来问去”账号、用户名的权利。
\n5、如用户注册“问来问去”账号后一年不登录，通知用户后，玲珑心科技可以收回该账号，以免造成资源浪费，由此造成的不利后果由用户自行承担。
       \n\n  <b>七、数据储存</b>
\n\n1、玲珑心科技不对用户在本服务中相关数据的删除或储存失败负责。
\n2、玲珑心科技可以根据实际情况自行决定用户在本服务中数据的最长储存期限，并在服务器上为其分配数据最大存储空间等。用户可根据自己的需要自行备份本服务中的相关数据。
\n3、如用户停止使用本服务或本服务终止，玲珑心科技可以从服务器上永久地删除用户的数据。本服务停止、终止后，玲珑心科技没有义务向用户返还任何数据。
        \n\n <b>八、风险承担</b>
\n\n1、用户理解并同意，“问来问去”仅为用户提供信息分享、传送及获取的平台，用户必须为自己注册账号下的一切行为负责，包括用户所传送的任何内容以及由此产生的任何后果。用户应对“问来问去”及本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。玲珑心科技无法且不会对因用户行为而导致的任何损失或损害承担责任。
\n如果用户发现任何人违反本协议约定或以其他不当的方式使用本服务，请立即向玲珑心科技举报或投诉，玲珑心科技将依本协议约定进行处理。
\n2、用户理解并同意，因业务发展需要，玲珑心科技保留单方面对本服务的全部或部分服务内容变更、暂停、终止或撤销的权利，用户需承担此风险。
\n\n<b>九、知识产权声明</b>
\n\n1、除本服务中涉及广告的知识产权由相应广告商享有外，玲珑心科技在本服务中提供的内容(包括但不限于网页、文字、图片、音频、视频、图表等)的知识产权均归玲珑心科技所有，但用户在使用本服务前对自己发布的内容已合法取得知识产权的除外。
\n2、除另有特别声明外，玲珑心科技提供本服务时所依托软件的著作权、专利权及其他知识产权均归玲珑心科技所有。
\n3、玲珑心科技在本服务中所涉及的图形、文字或其组成，以及其他玲珑心科技标志及产品、服务名称(以下统称“玲珑心科技标识”)，其著作权或商标权归玲珑心科技所有。未经玲珑心科技事先书面同意，用户不得将玲珑心科技标识以任何方式展示或使用或作其他处理，也不得向他人表明用户有权展示、使用、或其他有权处理玲珑心科技标识的行为。
\n4、上述及其他任何玲珑心科技或相关广告商依法拥有的知识产权均受到法律保护，未经玲珑心科技或相关广告商书面许可，用户不得以任何形式进行使用或创造相关衍生作品。
        \n\n<b>十、法律责任</b>
\n\n1、如果玲珑心科技发现或收到他人举报或投诉用户违反本协议约定的，玲珑心科技有权不经通知随时对相关内容，包括但不限于用户资料、聊天记录进行审查、删除，并视情节轻重对违规账号处以包括但不限于警告、账号封禁 、设备封禁 、功能封禁 的处罚，且通知用户处理结果。
\n2、因违反用户协议被封禁的用户，可联系客服查询封禁期限。其中，被实施功能封禁的用户会在封禁期届满后自动恢复被封禁功能。被封禁用户可向玲珑心科技网站相关页面提交申诉，玲珑心科技将对申诉进行审查，并自行合理判断决定是否变更处罚措施。
\n3、用户理解并同意，玲珑心科技有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应承担由此而产生的一切法律责任。
\n4、用户理解并同意，因用户违反本协议约定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户应当赔偿玲珑心科技与合作公司、关联公司，并使之免受损害。
\n\n<b>十一、不可抗力及其他免责事由</b>
\n\n1、用户理解并确认，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，玲珑心科技将努力在第一时间与相关单位配合，及时进行修复，但是由此给用户或第三方造成的损失，玲珑心科技及合作单位在法律允许的范围内免责。
\n2、本服务同大多数互联网服务一样，受包括但不限于用户原因、网络服务质量、社会环境等因素的差异影响，可能受到各种安全问题的侵扰，如他人利用用户的资料，造成现实生活中的骚扰;用户下载安装的其它软件或访问的其他网站中含有“特洛伊木马”等病毒，威胁到用户的计算机信息和数据的安全，继而影响本服务的正常使用等等。用户应加强信息安全及使用者资料的保护意识，要注意加强密码保护，以免遭致损失和骚扰。
\n3、用户理解并确认，本服务存在因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险，因此导致的用户或第三方任何损失，玲珑心科技不承担任何责任。
\n4、用户理解并确认，在使用本服务过程中存在来自任何他人的包括误导性的、欺骗性的、威胁性的、诽谤性的、令人反感的或非法的信息，或侵犯他人权利的匿名或冒名的信息，以及伴随该等信息的行为，因此导致的用户或第三方的任何损失，玲珑心科技不承担任何责任。

        \n5、用户理解并确认，玲珑心科技需要定期或不定期地对“问来问去”平台或相关的设备进行检修或者维护，如因此类情况而造成服务在合理时间内的中断，玲珑心科技无需为此承担任何责任，但玲珑心科技应事先进行通告。
\n6、玲珑心科技依据法律法规、本协议约定获得处理违法违规或违约内容的权利，该权利不构成玲珑心科技的义务或承诺，玲珑心科技不能保证及时发现违法违规或违约行为或进行相应处理。
\n7、用户理解并确认，对于玲珑心科技向用户提供的下列产品或者服务的质量缺陷及其引发的任何损失，玲珑心科技无需承担任何责任：
\n(1) 玲珑心科技向用户免费提供的服务;
\n(2) 玲珑心科技向用户赠送的任何产品或者服务。
\n8、在任何情况下，玲珑心科技均不对任何间接性、后果性、惩罚性、偶然性、特殊性或刑罚性的损害，包括因用户使用“问来问去”或本服务而遭受的利润损失，承担责任(即使玲珑心科技已被告知该等损失的可能性亦然)。尽管本协议中可能含有相悖的规定，玲珑心科技对用户承担的全部责任，无论因何原因或何种行为方式，始终不超过用户因使用玲珑心科技提供的服务而支付给玲珑心科技的费用(如有)。
\n\n<b>十二、服务的变更、中断、终止</b>
\n\n1、鉴于网络服务的特殊性，用户同意玲珑心科技有权随时变更、中断或终止部分或全部的服务(包括收费服务)。玲珑心科技变更、中断或终止的服务，玲珑心科技应当在变更、中断或终止之前通知用户，并应向受影响的用户提供等值的替代性的服务;如用户不愿意接受替代性的服务，如果该用户已经向玲珑心科技支付费用，玲珑心科技应当按照该用户实际使用服务的情况扣除相应费用之后将剩余的费用退还给用户。
\n2、如发生下列任何一种情形，玲珑心科技有权变更、中断或终止向用户提供的免费服务或收费服务，而无需对用户或任何第三方承担任何责任：
\n(1) 根据法律规定用户应提交真实信息，而用户提供的个人资料不真实、或与注册时信息不一致又未能提供合理证明;
\n(2) 用户违反相关法律法规或本协议的约定;
\n(3) 按照法律规定或有权机关的要求;
\n(4) 出于安全的原因或其他必要的情形。
\n\n<b>十三、其他</b>
        \n\n1、玲珑心科技郑重提醒用户注意本协议中免除玲珑心科技责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。
\n2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和玲珑心科技之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交玲珑心科技住所地有管辖权的人民法院管辖。
\n3、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。
    </string>
</resources>